Update index.htm, acréscimo opções comando mark

--- a/index.htm
+++ b/index.htm
@@ -64,6 +64,14 @@ let commands = [
                 name: '',
                 description: 'se nenhuma opção é fornecida, o programa exibe prompts para inserção de dados interativamente' 
             },
+            {
+                name: '--input-format',
+                description: 'permite inserir dados com o formato especificado. Formatos disponíveis: json'
+            },
+            {
+                name: '--output-format',
+                description: 'exibe resultados no formato especificado. Formatos disponíveis: json'
+            }
         ],
         mainCmd: true
     },
