Update index.htm, inclusão de opções no em mapin books create

--- a/index.htm
+++ b/index.htm
@@ -136,7 +136,39 @@ let commands = [
             {
                 name: '--output-format',
                 description: 'exibe resultados no formato especificado. Formatos disponíveis: json'
-            }
+            },
+             {
+    name: '--type',
+    description: 'o tipo do recurso a ser marcado. Tipos disponíveis: livro, vídeo'
+  },
+  {
+    name: '--title',
+    description: 'o título do livro'
+  },
+  {
+    name: '--author',
+    description: 'o autor do livro'
+  },
+  {
+    name: '--publisher',
+    description: 'a editora do livro'
+  },
+  {
+    name: '--publication',
+    description: 'o ano ou data de publicação do livro'
+  },
+  {
+    name: '--isbn',
+    description: 'o código isbn do livro'
+  },
+  {
+    name: '--edition',
+    description: 'a edição do livro'
+  },
+  {
+    name: '--total-pages',
+    description: 'a quantidade total de páginas'
+  }
         ]
     },
     {
