Update index.htm, acréscimo opções

--- a/index.htm
+++ b/index.htm
@@ -155,6 +155,10 @@ let commands = [
     description: 'a editora do livro'
   },
   {
+     name: '--obs',
+     description: 'observações a respeito do recurso em questão'
+    },         
+  {
     name: '--publication',
     description: 'o ano ou data de publicação do livro'
   },
@@ -181,7 +185,11 @@ let commands = [
 {
    name: "--total-duration",
    description: "a duração total(s) do vídeo(s) que está se marcando"
-}
+},
+{
+  name: '--show-fields',
+  description: 'exibe os campos que compōem um livro'
+ }
         ]
     },
     {
