Update index.htm, acréscimo opções

--- a/index.htm
+++ b/index.htm
@@ -187,8 +187,12 @@ let commands = [
    description: "a duração total(s) do vídeo(s) que está se marcando"
 },
 {
-  name: '--show-fields',
-  description: 'exibe os campos que compōem um livro'
+  name: '--show-fields <resource-type>',
+  description: 'exibe os campos que compōem o recurso especificado'
+ },
+{
+  name: '--copy-fields <resource-type>',
+  description: 'copia os campos que compōem o recurso especificado, para facilitar a inserção de dados'
  }
         ]
     },
