--- a/index.htm
+++ b/index.htm
@@ -14,21 +14,26 @@
         <script>
 /*
 
+BOOKMARK USAGE
+
 mapin mark                  # cria uma nova marcação
 mapin last                  # exibe a última página marcada
-mapin init                  # cria um novo marcador de páginas e o associa ao diretório
-mapin folder-link <bookmark># vincula um diretório a um marcador de páginas
+mapin init                  # cria um novo marcador de páginas e o associa ao diretório atual
+mapin link <bookmark>       # vincula um diretório a um marcador de páginas
 mapin history               # exibe as últimas cinco páginas marcadas
 mapin progress              # exibe o progresso da leitura
 mapin finish                # declara encerrada a leitura do material selecionado
-mapin cron start            # ativa o cronometragem de leitura
-mapin cron stop             # encerra a cronometragem de leitura
-mapin bookmarks use <bookmark>     # seleciona um marca páginas a partir do id
-mapin bookmarks list               # lista os marcadores de páginas disponíveis
-mapin bookmarks create             # cria um novo marcador de páginas (exibe prompts para a inserção dados do conteúdo a ser marcado)
-mapin bookmarks read <bookmark>    # exibe detalhes do marcador de páginas especificado
-mapin bookmarks update <bookmark>  # atualiza dados do marcador de páginas especificado
-mapin bookmarks delete <bookmark>  # apaga o marcador páginas especificado
+mapin timer start           # ativa o cronometragem de leitura
+mapin timer stop            # encerra a cronometragem de leitura
+mapin use <bookmark>        # seleciona um marca páginas a partir do id
+
+BOOKMARKS MANAGMENT
+
+mapin list               # lista os marcadores de páginas disponíveis
+mapin create             # cria um novo marcador de páginas (exibe prompts para a inserção dados do conteúdo a ser marcado)
+mapin read <bookmark>    # exibe detalhes do marcador de páginas especificado
+mapin update <bookmark>  # atualiza dados do marcador de páginas especificado
+mapin delete <bookmark>  # apaga o marcador páginas especificado
 
 
 Tipo Status Nome Id Progresso
